syntax = "proto3";

package edge;

import "validate/validate.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/edge";

message Worker {
    string worker_name = 1 [(validate.rules).string.min_len = 1];
    repeated Task.Identifier acceptable_tasks = 2 [(validate.rules).repeated.min_items = 1];
    map<string, string> metadata = 6;
}

message Task {
    enum Kind {
        KIND_UNSPECIFIED = 0;
        KIND_SETUP_CONTAINERS = 1;
        KIND_INSTALL_STROPPY = 2;
        KIND_RUN_STROPPY = 3;
    }
    message Identifier {
        string run_id = 1 [(validate.rules).string.min_len = 1];
        string task_id = 2 [(validate.rules).string.min_len = 1];
        Kind kind = 3 [(validate.rules).enum.defined_only = true];
    }
}
